--- a/why-attend.html
+++ b/why-attend.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why Attend - QELE 2026</title>
+    <meta name="description" content="Attend the top university fair and education exhibition in Qatar. Meet universities, explore study abroad options, and get career guidance at this unmissable admission fair.">
+    <title>Why Attend Qatar's International University Fair | EduExpo Qatar 2026</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,12 +19,53 @@
   }
 }
 </script>
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "EduExpo Qatar 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Visit",
+          "item": "/why-attend.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Why Attend"
+        }]
+      }
+    ]
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="EduExpo Qatar 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -77,16 +119,16 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Why Attend QELE 2026?</h1>
+                <h1>Why Attend Qatar's Leading University Fair?</h1>
                 <p>Discover your future, connect with leaders, and explore the latest in education.</p>
             </div>
         </section>
 
         <section id="why-attend-benefits">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="QELE Mascot" class="why-attend-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="EduExpo Qatar's owl mascot pointing to the benefits of attending the expo." class="why-attend-mascot">
                 <h2>Benefits for Every Attendee</h2>
-                <p class="subtitle">Whether you're a student, parent, or educator, QELE 2026 offers invaluable opportunities.</p>
+                <p class="subtitle">Whether you're a student, parent, or educator, EduExpo Qatar 2026 offers invaluable opportunities.</p>
                 <div class="benefits-grid">
                     <div class="benefit-card">
                         <i class="fas fa-user-graduate"></i>
@@ -171,7 +213,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076630/owl-vr_mev0of.png" alt="QELE Mascot" class="footer-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076630/owl-vr_mev0of.png" alt="EduExpo Qatar's owl mascot looking over the decision-makers statistics section." class="footer-mascot">
             </div>
         </section>
     </main>
@@ -180,7 +222,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="EduExpo Qatar 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -225,7 +267,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 EduExpo Qatar. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
