--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,61 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get in touch with the QELE 2026 team. Contact us for inquiries about exhibiting, sponsoring, attending, or speaking at Qatar's leading education expo.">
-    <title>Contact Us - QELE 2026</title>
+    <meta name="description" content="Get in touch with the Qatar Education Expo 2026 team. Contact us for inquiries about exhibiting, sponsoring, attending, or speaking at Qatar's leading international education fair.">
+    <title>Contact Us - Qatar Education Expo 2026 | International Education Fair</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="alternate" hreflang="en-QA" href="/contact.html" />
+    <link rel="alternate" hreflang="ar-QA" href="/ar/contact.html" />
+    <link rel="alternate" hreflang="x-default" href="/contact.html" />
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "QATAR EDUCATION LEADERSHIP EXPO 2026 (QELE)",
-      "url": "/index.html",
-      "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
-      "sameAs": [
-        "https://twitter.com/qatarexpo2026",
-        "https://linkedin.com/company/qatarexpo2026",
-        "https://instagram.com/qatarexpo2026"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+974-7444-9111",
-        "contactType": "Customer Service",
-        "email": "partnerships@eduexpoqatar.com"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Contact"
+        }]
       }
-    }
+    ]
     </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -79,6 +98,11 @@
                         </ul>
                     </li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li class="language-switcher">
+                        <a href="#" class="nav-link lang-active" onclick="return false;">English</a>
+                        <span class="lang-separator">|</span>
+                        <a href="#" class="nav-link" onclick="alert('Arabic version coming soon!'); return false;" lang="ar">العربية</a>
+                    </li>
                 </ul>
             </nav>
             <div class="header-ctas">
@@ -91,7 +115,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Get In Touch</h1>
+                <h1>Contact Us</h1>
                 <p>We're here to help. Contact us for any inquiries about exhibiting, sponsoring, or attending.</p>
             </div>
         </section>
@@ -117,7 +141,7 @@
                     </div>
                     <!-- Card 3: WhatsApp -->
                      <div class="contact-card quick-chat-card-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.png" alt="QELE's owl mascot wearing a headset, representing the quick chat support option." class="contact-quick-chat-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.png" alt="Qatar Education Expo's owl mascot wearing a headset, representing the quick chat support option." class="contact-quick-chat-mascot">
                         <i class="fab fa-whatsapp"></i>
                         <h4>Quick Chat</h4>
                         <p>For quick questions, connect with us directly on WhatsApp.</p>
@@ -189,7 +213,7 @@
                 <h2>Quick Answers</h2>
                 <div class="faq-accordion">
                     <div class="faq-item faq-item-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="QELE's owl mascot with a question mark, inviting users to check the FAQ." class="contact-faq-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="Qatar Education Expo's owl mascot with a question mark, inviting users to check the FAQ." class="contact-faq-mascot">
                         <button class="faq-question" aria-expanded="false">
                             <span>How do I register as a student?</span>
                             <i class="fas fa-plus"></i>
@@ -226,7 +250,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -271,7 +295,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
@@ -311,42 +335,4 @@
                         <div class="error-message"></div>
                     </div>
                      <div class="form-group">
-                        <label for="deck-form-phone">Mobile Number *</label>
-                        <input type="tel" id="deck-form-phone" name="phone" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="deck-form-designation">Designation *</label>
-                            <input type="text" id="deck-form-designation" name="designation" required>
-                            <div class="error-message"></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="deck-form-organization">Organization *</label>
-                            <input type="text" id="deck-form-organization" name="organization" required>
-                            <div class="error-message"></div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Download Now</button>
-                </form>
-            </div>
-            <div id="deck-form-success" style="display: none; text-align: center;">
-                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
-                <h3>Thank You!</h3>
-                <p>Your download should start automatically. If it doesn't, please check your pop-up blocker or try again.</p>
-            </div>
-        </div>
-    </div>
-    
-    <!-- Mobile Sticky Bar -->
-    <div id="mobile-sticky-bar">
-        <a href="booth-registration.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>Exhibitor</span></a>
-        <a href="sponsorship-registration.html" class="mobile-cta-btn"><i class="fas fa-star"></i><span>Sponsor</span></a>
-        <a href="student-registration.html" class="mobile-cta-btn"><i class="fas fa-graduation-cap"></i><span>Student</span></a>
-        <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
-    </div>
-
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
-    <script type="module" src="index.tsx"></script>
-</body>
-</html>
+                        <label for="deck-form-phone">Mobile Number *
