--- a/career-counselling.html
+++ b/career-counselling.html
@@ -1,42 +1,66 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get free, personalized career counselling at QELE 2026. Our experts help students with university matching, profile building, and scholarship guidance.">
-    <title>Free Career Counselling for Students | QELE 2026</title>
+    <meta name="description" content="Get expert guidance to study abroad at our global education expo. We offer specialized advice for students looking to study in the UK, study in Canada, and other top destinations from Qatar at this premier international education fair.">
+    <title>Free Study Abroad Guidance | Study in UK & Canada | Gulf Education Exhibition</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="alternate" hreflang="en-QA" href="/career-counselling.html" />
+    <link rel="alternate" hreflang="ar-QA" href="/ar/career-counselling.html" />
+    <link rel="alternate" hreflang="x-default" href="/career-counselling.html" />
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "QATAR EDUCATION LEADERSHIP EXPO 2026 (QELE)",
-      "url": "/index.html",
-      "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
-      "sameAs": [
-        "https://twitter.com/qatarexpo2026",
-        "https://linkedin.com/company/qatarexpo2026",
-        "https://instagram.com/qatarexpo2026"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+974-7444-9111",
-        "contactType": "Customer Service",
-        "email": "partnerships@eduexpoqatar.com"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "For Students",
+          "item": "/student-registration.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Career Counselling"
+        }]
       }
-    }
+    ]
     </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -79,6 +103,11 @@
                         </ul>
                     </li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li class="language-switcher">
+                        <a href="#" class="nav-link lang-active" onclick="return false;">English</a>
+                        <span class="lang-separator">|</span>
+                        <a href="#" class="nav-link" onclick="alert('Arabic version coming soon!'); return false;" lang="ar">العربية</a>
+                    </li>
                 </ul>
             </nav>
             <div class="header-ctas">
@@ -92,8 +121,8 @@
         <section id="hero" style="background-image: url('https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); padding: 80px 0;">
             <div class="container hero-content">
                 <div class="hero-text">
-                    <h1>Chart Your Course to a Bright Future</h1>
-                    <p>Free, personalized career counselling at QELE 2026 to help you discover your path, choose the right university, and build a standout profile.</p>
+                    <h1>Expert Guidance to Study Abroad</h1>
+                    <p>Free, personalized career counselling at Qatar Education Expo 2026 to help you discover your path, choose the right university, and build a standout profile.</p>
                     <div class="cta-group">
                         <a href="student-registration.html" class="btn btn-primary">Register for Free Access</a>
                     </div>
@@ -147,7 +176,7 @@
                 <div class="guidance-process">
                     <div class="guidance-step">
                         <div class="step-indicator"><span class="step-number">STEP 1</span><i class="fas fa-arrow-right"></i></div>
-                        <h3>Register for QELE 2026</h3>
+                        <h3>Register for Qatar Education Expo 2026</h3>
                         <p>Your free student registration is your all-access pass. Once registered, you'll be eligible to book a counselling slot.</p>
                     </div>
                     <div class="guidance-step">
@@ -243,7 +272,7 @@
         <section id="final-cta">
             <div class="container">
                  <h2>Ready to Take the First Step?</h2>
-                 <p>Your future is waiting. Register for your free QELE 2026 pass today to unlock access to our expert career counselling services, meet top universities, and more.</p>
+                 <p>Your future is waiting. Register for your free Qatar Education Expo 2026 pass today to unlock access to our expert career counselling services, meet top universities, and more.</p>
                  <div class="cta-group">
                     <a href="student-registration.html" class="btn btn-primary" style="background: #101c35; border-color: #101c35;">Register for Free Now</a>
                     <a href="contact.html" class="btn btn-outline-light">Contact Us</a>
@@ -256,7 +285,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -301,7 +330,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
