--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get in touch with the Qatar Education Expo 2026 team. Contact us for inquiries about exhibiting, sponsoring, attending, or speaking at Qatar's leading international education fair.">
     <title>Contact Us - Qatar Education Expo 2026 | International Education Fair</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/contact.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/contact.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="alternate" hreflang="en-QA" href="/contact.html" />
-    <link rel="alternate" hreflang="ar-QA" href="/ar/contact.html" />
-    <link rel="alternate" hreflang="x-default" href="/contact.html" />
     <script type="application/ld+json">
     [
       {
@@ -98,11 +107,6 @@
                         </ul>
                     </li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="language-switcher">
-                        <a href="#" class="nav-link lang-active" onclick="return false;">English</a>
-                        <span class="lang-separator">|</span>
-                        <a href="#" class="nav-link" onclick="alert('Arabic version coming soon!'); return false;" lang="ar">العربية</a>
-                    </li>
                 </ul>
             </nav>
             <div class="header-ctas">
@@ -335,4 +339,42 @@
                         <div class="error-message"></div>
                     </div>
                      <div class="form-group">
-                        <label for="deck-form-phone">Mobile Number *
+                        <label for="deck-form-phone">Mobile Number *</label>
+                        <input type="tel" id="deck-form-phone" name="phone" required>
+                        <div class="error-message"></div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="deck-form-designation">Designation *</label>
+                            <input type="text" id="deck-form-designation" name="designation" required>
+                            <div class="error-message"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="deck-form-organization">Organization *</label>
+                            <input type="text" id="deck-form-organization" name="organization" required>
+                            <div class="error-message"></div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="width: 100%;">Download Now</button>
+                </form>
+            </div>
+            <div id="deck-form-success" style="display: none; text-align: center;">
+                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
+                <h3>Thank You!</h3>
+                <p>Your download should start automatically. If it doesn't, please check your pop-up blocker or try again.</p>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Mobile Sticky Bar -->
+    <div id="mobile-sticky-bar">
+        <a href="booth-registration.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>Exhibitor</span></a>
+        <a href="sponsorship-registration.html" class="mobile-cta-btn"><i class="fas fa-star"></i><span>Sponsor</span></a>
+        <a href="student-registration.html" class="mobile-cta-btn"><i class="fas fa-graduation-cap"></i><span>Student</span></a>
+        <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
+    </div>
+
+    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
+    <script type="module" src="index.tsx"></script>
+</body>
+</html>
