--- a/plan-your-trip.html
+++ b/plan-your-trip.html
@@ -1,42 +1,75 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Plan your trip to QELE 2026 in Doha, Qatar. Find information on the venue, visa requirements, travel, and local attractions for a seamless visit.">
-    <title>Plan Your Trip - QELE 2026</title>
+    <meta name="description" content="Plan your trip to Qatar Education Expo 2026. Find venue details for the Sheraton Grand Doha, visa info, and travel tips for this international education exhibition.">
+    <title>Plan Your Trip to Qatar Education Expo 2026 | Doha Education Exhibition</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/plan-your-trip.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/plan-your-trip.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "QATAR EDUCATION LEADERSHIP EXPO 2026 (QELE)",
-      "url": "/index.html",
-      "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
-      "sameAs": [
-        "https://twitter.com/qatarexpo2026",
-        "https://linkedin.com/company/qatarexpo2026",
-        "https://instagram.com/qatarexpo2026"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+974-7444-9111",
-        "contactType": "Customer Service",
-        "email": "partnerships@eduexpoqatar.com"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Visit",
+          "item": "/why-attend.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Plan Your Trip"
+        }]
       }
-    }
+    ]
     </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -91,7 +124,7 @@
         <section class="page-header">
             <div class="container">
                 <h1>Plan Your Trip</h1>
-                <p>Everything you need to know for a seamless visit to Doha for QELE 2026.</p>
+                <p>Everything you need to know for a seamless visit to Doha for Qatar Education Expo 2026.</p>
             </div>
         </section>
 
@@ -125,7 +158,7 @@
                 <p class="subtitle">Qatar offers accessible visa options for visitors from around the world. Please review the requirements applicable to your nationality.</p>
                 <div class="content-grid">
                     <div class="content-card hayya-card">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762080864/Untitled_design_-_2025-11-02T161534.918_idrjbh.png" alt="QELE's owl mascot dressed as a pilot, providing information on visa and entry." class="visa-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762080864/Untitled_design_-_2025-11-02T161534.918_idrjbh.png" alt="Qatar Education Expo's owl mascot dressed as a pilot, providing information on visa and entry." class="visa-mascot">
                         <h3><i class="fas fa-passport"></i> Hayya Platform</h3>
                         <p>For many nationalities, the Hayya platform is the main portal for entry visas. It offers a streamlined digital service for tourists and event attendees.</p>
                         <a href="https://hayya.qa/" class="btn btn-primary" target="_blank">Visit Hayya Portal</a>
@@ -229,7 +262,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -274,7 +307,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
